--- a/angular-crud/src/app/pages/moedas/moedas.component.html
+++ b/angular-crud/src/app/pages/moedas/moedas.component.html
@@ -5,8 +5,10 @@
   </div>
 </div>
 
+<h1>{{ listPrice.ticker | json }}</h1>
+
 <ul class="list-group">
-  <li class="list-group-item">Cras justo odio</li>
+  <li class="list-group-item">{{ listPrice.ticker.high }}</li>
   <li class="list-group-item">Dapibus ac facilisis in</li>
   <li class="list-group-item">Morbi leo risus</li>
   <li class="list-group-item">Porta ac consectetur ac</li>
